Updated BertNERTagger: allow to download the model from huggingface

--- a/using_bert_ner_tagger.ipynb
+++ b/using_bert_ner_tagger.ipynb
@@ -7,7 +7,17 @@
    "source": [
     "### Tutorial: using finetuned est-roberta's NER model\n",
     "\n",
-    "This tutorial shows how to use finetuned est-roberta's NER model with EstNLTK. "
+    "This tutorial shows how to use finetuned est-roberta's NER model with EstNLTK. \n",
+    "\n",
+    "### Prerequisites\n",
+    "\n",
+    "For running this code, you'll need:\n",
+    "\n",
+    "* Python 3.7+\n",
+    "* [estnltk v1.6.9+](https://github.com/estnltk/estnltk)\n",
+    "* [pytorch v1.7.0+](https://pytorch.org/)\n",
+    "* [transformers v4.0.0+](https://huggingface.co/transformers)\n",
+    "* Python modules `data_preprocessing` and `bert_ner_tagger` from [this repository](https://github.com/soras/vk_ner_lrec_2022)\n"
    ]
   },
   {
@@ -20,7 +30,27 @@
     "import os\n",
     "from estnltk import Text\n",
     "\n",
-    "# Location of the model\n",
+    "# Load preprocessing utils\n",
+    "from data_preprocessing import TokenizationPreprocessorFixed\n",
+    "preprocessor = TokenizationPreprocessorFixed()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e57f12d",
+   "metadata": {},
+   "source": [
+    "There are 2 ways for initializing `BertNERTagger`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "46f211ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Option 1: load model from the local directory\n",
     "bert_models_dir = 'bert_models'\n",
     "bertner_model_location = os.path.join( bert_models_dir, 'model_est-roberta_10_bs16_lr5e-05_ep8' )\n",
     "assert os.path.exists(bertner_model_location)\n",
@@ -29,16 +59,35 @@
     "from bert_ner_tagger import BertNERTagger\n",
     "bert_ner_tagger = BertNERTagger(bert_tokenizer_location=bertner_model_location, \n",
     "                                bert_ner_location=bertner_model_location, output_layer='bert_ner',\n",
-    "                                token_level=False, do_lower_case=False, use_fast=False)\n",
-    "\n",
-    "# Load preprocessing utils\n",
-    "from data_preprocessing import TokenizationPreprocessorFixed\n",
-    "preprocessor = TokenizationPreprocessorFixed()"
+    "                                token_level=False, do_lower_case=False, use_fast=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "19742211",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Option 2: download the model from the huggingface\n",
+    "from bert_ner_tagger import BertNERTagger\n",
+    "hf_model_id = 'tartuNLP/est-roberta-hist-ner'\n",
+    "bert_ner_tagger = BertNERTagger(bert_tokenizer_location=hf_model_id, \n",
+    "                                bert_ner_location=hf_model_id, output_layer='bert_ner',\n",
+    "                                token_level=False, do_lower_case=False, use_fast=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03c085bd",
+   "metadata": {},
+   "source": [
+    "And now we can use the tagger:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "27badacb",
    "metadata": {},
    "outputs": [
@@ -127,7 +176,7 @@
        "Span('Ropka mõisas', [{'bert_tokens': ['▁Ro', 'p', 'ka', '▁mõisas'], 'nertag': 'LOC_ORG'}])])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "9e631d70",
    "metadata": {},
    "outputs": [
@@ -239,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "ee352190",
    "metadata": {},
    "outputs": [
@@ -314,7 +363,7 @@
        "AmbiguousAttributeTupleList([[[7, 10, 'Aru', 'LOC']], [[11, 16, 'Ropka', 'LOC_ORG']], [[25, 32, 'G. Sarw', 'PER']], [[55, 65, 'Peter Mitt', 'PER']], [[104, 114, 'Peter Mitt', 'PER']], [[144, 147, 'Aru', 'LOC_ORG']], [[148, 160, 'Ropka mõisas', 'LOC_ORG']]], ('start', 'end', 'text', 'nertag'))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
