--- a/using_bert_ner_tagger.ipynb
+++ b/using_bert_ner_tagger.ipynb
@@ -40,7 +40,7 @@
    "id": "2e57f12d",
    "metadata": {},
    "source": [
-    "There are 2 ways for initializing `BertNERTagger`:"
+    "There are 2 ways to initialize `BertNERTagger`:"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Option 2: download the model from the huggingface\n",
+    "# Option 2: download the model from huggingface.co (or use the model from transformers cache, if already downloaded)\n",
     "from bert_ner_tagger import BertNERTagger\n",
     "hf_model_id = 'tartuNLP/est-roberta-hist-ner'\n",
     "bert_ner_tagger = BertNERTagger(bert_tokenizer_location=hf_model_id, \n",
