Fixes: added missing sentencepiece dependency + import paths for v1.7

--- a/using_bert_ner_tagger.ipynb
+++ b/using_bert_ner_tagger.ipynb
@@ -17,6 +17,7 @@
     "* [estnltk v1.6.9+](https://github.com/estnltk/estnltk)\n",
     "* [pytorch v1.7.0+](https://pytorch.org/)\n",
     "* [transformers v4.0.0+](https://huggingface.co/transformers)\n",
+    "* [sentencepiece](https://pypi.org/project/sentencepiece)\n",
     "* Python modules `data_preprocessing` and `bert_ner_tagger` from [this repository](https://github.com/soras/vk_ner_lrec_2022)\n"
    ]
   },
@@ -390,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
